[gd_scene load_steps=15 format=3 uid="uid://dro88tu4x6qee"]

[ext_resource type="Script" path="res://src/Nodes/Scripts/ResponseNode.gd" id="1"]
[ext_resource type="Theme" uid="uid://hgc7wambejk3" path="res://Assets/MainEditor.tres" id="2"]
[ext_resource type="Texture2D" uid="uid://dp06u4lm2g85h" path="res://Assets/UI Textures/Response.png" id="2_fs3ij"]
[ext_resource type="Texture2D" uid="uid://dglt5gy2cfr6q" path="res://Assets/UI Textures/ResponseNode.png" id="3_klm7u"]

[sub_resource type="StyleBoxTexture" id="8"]
texture = ExtResource("2_fs3ij")
region_rect = Rect2(0, 0, 267, 137)

[sub_resource type="StyleBoxTexture" id="6"]
texture = ExtResource("3_klm7u")
region_rect = Rect2(0, 0, 267, 137)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5f32e"]
bg_color = Color(0.945313, 0.28125, 0.078125, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_tx3bi"]

[sub_resource type="StyleBoxEmpty" id="3"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tfp23"]
bg_color = Color(0.298039, 0.298039, 0.298039, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8
shadow_offset = Vector2(2, 2)

[sub_resource type="StyleBoxFlat" id="4"]
bg_color = Color(0.172549, 0.239216, 0.592157, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="FontFile" id="5"]
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)

[sub_resource type="LabelSettings" id="LabelSettings_a4k5e"]
font_size = 43

[sub_resource type="RectangleShape2D" id="1"]
size = Vector2(323, 174)

[node name="PlayerResponseNode" type="GraphNode" groups=["Response_Nodes"]]
z_as_relative = false
custom_minimum_size = Vector2(345, 215)
offset_right = 335.0
offset_bottom = 215.0
theme = ExtResource("2")
theme_override_styles/frame = SubResource("8")
theme_override_styles/selected_frame = SubResource("6")
theme_override_styles/comment_focus = SubResource("StyleBoxFlat_5f32e")
theme_override_styles/slot = SubResource("StyleBoxEmpty_tx3bi")
title = "Response Node"
show_close = true
slot/0/left_enabled = false
slot/0/left_type = 1
slot/0/left_color = Color(0, 1, 0, 1)
slot/0/left_icon = null
slot/0/right_enabled = false
slot/0/right_type = 3
slot/0/right_color = Color(0, 0, 1, 1)
slot/0/right_icon = null
slot/0/draw_stylebox = false
slot/1/left_enabled = true
slot/1/left_type = 1
slot/1/left_color = Color(1, 0.294118, 0.105882, 1)
slot/1/left_icon = null
slot/1/right_enabled = true
slot/1/right_type = 0
slot/1/right_color = Color(0.14902, 0, 1, 1)
slot/1/right_icon = null
slot/1/draw_stylebox = true
slot/2/left_enabled = false
slot/2/left_type = 0
slot/2/left_color = Color(1, 1, 1, 1)
slot/2/left_icon = null
slot/2/right_enabled = false
slot/2/right_type = 0
slot/2/right_color = Color(1, 1, 1, 1)
slot/2/right_icon = null
slot/2/draw_stylebox = true
slot/3/left_enabled = false
slot/3/left_type = 0
slot/3/left_color = Color(1, 1, 1, 1)
slot/3/left_icon = null
slot/3/right_enabled = false
slot/3/right_type = 0
slot/3/right_color = Color(1, 1, 1, 1)
slot/3/right_icon = null
slot/3/draw_stylebox = true
script = ExtResource("1")
_response_text_node_path = NodePath("HBoxContainer/VBoxContainer/ResponseText")
_color_picker_node_path = NodePath("HBoxContainer/VBoxContainer/HBoxContainer/ColorPickerButton")
_option_type_node_path = NodePath("HBoxContainer/VBoxContainer/HBoxContainer/OptionTypeButton")
_command_text_node_path = NodePath("HBoxContainer/VBoxContainer/CommandText")
_new_dialog_button_path = NodePath("HBoxContainer/AddNewDialog")
_remote_connection_container_path = NodePath("VBOXRemoteConnection")
_remote_connection_text_path = NodePath("VBOXRemoteConnection/ConnectedLabel")
_remote_connection_disconnect_button_path = NodePath("VBOXRemoteConnection/HBoxContainer/DisconnectButton")
_remote_connection_jump_button_path = NodePath("VBOXRemoteConnection/HBoxContainer/JumpButton")
_remote_connection_vseparation_path = NodePath("VBOXRemoteConnection/HBoxContainer/VSeparator")
_id_spinbox = NodePath("HBoxContainer/VBoxContainer/HBoxContainer/SpinBox")

[node name="HSeparator" type="HSeparator" parent="."]
custom_minimum_size = Vector2(0, 70)
layout_mode = 2
mouse_filter = 1
theme_override_styles/separator = SubResource("3")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(310, 25)
layout_mode = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
custom_minimum_size = Vector2(270, 0)
layout_mode = 2

[node name="ResponseText" type="LineEdit" parent="HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(270, 35)
layout_mode = 2
theme_override_font_sizes/font_size = 13
placeholder_text = "RESPONSE_TITLE"

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="ColorPickerButton" type="ColorPickerButton" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
size_flags_vertical = 0
color = Color(1, 1, 1, 1)
edit_alpha = false

[node name="OptionTypeButton" type="OptionButton" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
clip_contents = true
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
alignment = 1
text_overrun_behavior = 3
clip_text = true
icon_alignment = 1
item_count = 5
selected = 0
fit_to_longest_item = false
popup/item_0/text = "RESPONSE_OPTION_DIALOG"
popup/item_0/id = 1
popup/item_1/text = "RESPONSE_OPTION_ROLE"
popup/item_1/id = 3
popup/item_2/text = "RESPONSE_OPTION_COMMAND"
popup/item_2/id = 4
popup/item_3/text = "RESPONSE_OPTION_CLOSE"
popup/item_3/id = 0
popup/item_4/text = "RESPONSE_OPTION_DISABLED"
popup/item_4/id = 2

[node name="SpinBox" type="SpinBox" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
focus_mode = 1
max_value = 99999.0
prefix = "ID"

[node name="CommandText" type="TextEdit" parent="HBoxContainer/VBoxContainer"]
visible = false
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
placeholder_text = "COMMAND"

[node name="AddNewDialog" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(25, 60)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_tfp23")
theme_override_styles/hover = SubResource("4")
text = "+"

[node name="VBOXRemoteConnection" type="VBoxContainer" parent="."]
visible = false
layout_mode = 2
alignment = 1

[node name="ConnectedLabel" type="Label" parent="VBOXRemoteConnection"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
theme_override_fonts/font = SubResource("5")
text = "Connected to DialogTitle | Node 56"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBOXRemoteConnection"]
layout_mode = 2
alignment = 1

[node name="DisconnectButton" type="Button" parent="VBOXRemoteConnection/HBoxContainer"]
layout_mode = 2
text = "Disconnect"

[node name="VSeparator" type="VSeparator" parent="VBOXRemoteConnection/HBoxContainer"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2

[node name="JumpButton" type="Button" parent="VBOXRemoteConnection/HBoxContainer"]
layout_mode = 2
text = "Jump To Node"

[node name="Warning Label" type="Label" parent="."]
visible = false
layout_mode = 2
size_flags_vertical = 0
tooltip_text = "ORPHANED_RESPONSE_OPTION_WARNING"
mouse_filter = 1
text = "âš "
label_settings = SubResource("LabelSettings_a4k5e")
horizontal_alignment = 1

[node name="ResponseNodeArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ResponseNodeArea"]
position = Vector2(164.5, 106)
shape = SubResource("1")

[connection signal="close_request" from="." to="." method="_on_PlayerResponseNode_close_request"]
[connection signal="gui_input" from="." to="." method="_on_PlayerResponseNode_gui_input"]
[connection signal="node_deselected" from="." to="." method="_on_node_deselected"]
[connection signal="node_selected" from="." to="." method="_on_node_selected"]
[connection signal="position_offset_changed" from="." to="." method="_on_PlayerResponseNode_offset_changed"]
[connection signal="gui_input" from="HBoxContainer/VBoxContainer/ResponseText" to="." method="_on_response_text_gui_input"]
[connection signal="text_changed" from="HBoxContainer/VBoxContainer/ResponseText" to="." method="_on_ResponseText_text_changed"]
[connection signal="color_changed" from="HBoxContainer/VBoxContainer/HBoxContainer/ColorPickerButton" to="." method="_on_ColorPickerButton_color_changed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/HBoxContainer/ColorPickerButton" to="." method="_on_color_picker_button_pressed"]
[connection signal="item_selected" from="HBoxContainer/VBoxContainer/HBoxContainer/OptionTypeButton" to="." method="_on_OptionButton_item_selected"]
[connection signal="changed" from="HBoxContainer/VBoxContainer/HBoxContainer/SpinBox" to="." method="_on_spin_box_value_changed"]
[connection signal="value_changed" from="HBoxContainer/VBoxContainer/HBoxContainer/SpinBox" to="." method="_on_spin_box_value_changed"]
[connection signal="text_changed" from="HBoxContainer/VBoxContainer/CommandText" to="." method="_on_CommandText_text_changed"]
[connection signal="pressed" from="HBoxContainer/AddNewDialog" to="." method="_on_AddNewDialog_pressed"]
[connection signal="pressed" from="VBOXRemoteConnection/HBoxContainer/DisconnectButton" to="." method="_on_DisconnectButton_pressed"]
[connection signal="pressed" from="VBOXRemoteConnection/HBoxContainer/JumpButton" to="." method="_on_JumpButton_pressed"]
[connection signal="area_entered" from="ResponseNodeArea" to="." method="_on_ResponseNodeArea_area_entered"]
[connection signal="area_exited" from="ResponseNodeArea" to="." method="_on_ResponseNodeArea_area_exited"]
